# smart-sontainer-registry-backend

./: .env.example  .gitignore  README.md  alembic.ini  debug_env.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
app/: config.py  dependencies.py  main.py
app/api/: auth.py  middleware.py  router.py
app/core/: database.py  decorators.py  exceptions.py  function_registry.py  logging.py  redis.py  security.py
app/models/: __init__.py  base.py  chat_session.py  deployment.py  image.py  rule.py  sync_log.py  user.py
app/repositories/: base_repository.py  chat_repository.py  deployment_repository.py  image_repository.py  rule_repository.py  sync_repository.py  user_repository.py
app/services/: auth_service.py  cache_service.py  chat_service.py  chatbot_service.py  k8s_service.py  overview_service.py  registry_service.py  report_service.py  rule_engine.py  sync_service.py
app/workers/: k8s_sync_worker.py  rule_evaluation_worker.py  s3_sync_worker.py  scheduler.py
docs/: api.md  deployment.md  development.md
migrations/: alembic.ini  env.py
migrations/versions/: 6a1d788f0527_create_initial_schema.py  87e0fcc1899e_add_users_table.py  a623c360e57b_add_users_table.py  b61f1f8102a6_add_new_fields_to_image_model.py
scripts/: deploy.sh  init_db.py  seed_data.py
tests/: conftest.py
tests/test_api/: test_chat.py  test_registry.py  test_reports.py
tests/test_repositories/: test_deployment_repository.py  test_image_repository.py
tests/test_services/: test_chat_service.py  test_k8s_service.py  test_registry_service.py  test_report_service.py  (+2 more)
(+17 files in other folders)
