[build-system] 
requires = ["setuptools>=45", "wheel"] 
build-backend = "setuptools.build_meta" 
 
[project] 
name = "smart-registry-backend" 
version = "0.1.0" 
description = "Smart Container Registry Backend" 
authors = [{name = "Your Name", email = "your.email@example.com"}] 
readme = "README.md" 
requires-python = ">=3.11" 
 
[tool.pytest.ini_options] 
testpaths = ["tests"] 
python_files = ["test_*.py"] 
python_classes = ["Test*"] 
python_functions = ["test_*"] 
asyncio_mode = "auto" 
